--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -371,7 +371,8 @@ navbar:
     - { key: "archive", link: "/archives/", icon: "iconfont icon-archive-fill" }
     - { key: "category", link: "/categories/", icon: "iconfont icon-category-fill" }
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
-    - { key: "philia093", name: "昔涟", link: "/philia093/", icon: "iconfont icon-brush" }
+    - { key: "calendar", name: "月历", link: "https://cyrene.icu/", icon: "iconfont icon-note" }
+    - { key: "philia093", name: "昔涟", link: "https://cyrene.icu/philia093/", icon: "iconfont icon-brush" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
     #- { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
 
